# evalrag-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: .gitkeep
backend/: .dockerignore  .gitkeep  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: routes_chat.py  routes_documents.py  routes_eval.py  routes_health.py
backend/app/core/: exceptions.py  logging.py
backend/app/eval/: __init__.py  dataset.py  judge.py  metrics.py  runner.py
backend/app/infrastructure/: embedding_client.py  llm_client.py  postgres.py  qdrant.py  storage.py
backend/app/repositories/: chunk_repository.py  document_repository.py  eval_repository.py
backend/app/schemas/: chat_schema.py  document_schema.py  eval_schema.py
backend/app/scripts/: migrate.py
backend/app/services/: chunking_service.py  document_service.py  embedding_service.py  generation_service.py  ingestion_service.py  rag_pipeline.py  retrieval_service.py
backend/app/tests/: test_chunking.py  test_metrics.py  test_retrieval_fusion.py
backend/migrations/: 001_initial_schema.sql  002_eval_runs.sql
datasets/: README.md  sample.jsonl
datasets/evaluation/: .gitkeep
datasets/sample_documents/: .gitkeep
docs/: architecture.md  demo_script.md  deployment.md  evaluation_report.md  guardrails.md  rag_pipeline.md  roadmap.md
frontend/: .dockerignore  .gitkeep  Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.jsx  (+3 more)
